[gd_scene load_steps=3 format=3 uid="uid://s1idqh2n44wy"]

[ext_resource type="Script" path="res://HUD/HUD.gd" id="1_5ma3c"]
[ext_resource type="FontFile" uid="uid://dmrfj22yt4ydq" path="res://fonts/retrofont.ttf" id="2_d0517"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_5ma3c")

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_d0517")
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="highscoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -101.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_d0517")
theme_override_font_sizes/font_size = 24
text = "High Score: 0"
horizontal_alignment = 2

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -15.5
offset_right = 48.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.772549, 0.611765, 0.588235, 1)
theme_override_fonts/font = ExtResource("2_d0517")
theme_override_font_sizes/font_size = 34
text = "start game "

[node name="scoretimer" type="Timer" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="scoretimer" to="." method="_on_scoretimer_timeout"]
